--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="https://www.instagram.com/witchprincess.ink/">Instagram</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shop</a>
+              <a class="nav-link" href="http://witchprincess.storenvy.com/">Shop</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="mailto:madisyndelporto@gmail.com">Contact</a>
@@ -63,7 +63,7 @@
             </a>
         </div>
         <div class="col-sm">
-            <a class="no-dec" href="#">
+            <a class="no-dec" href="http://witchprincess.storenvy.com/">
             <div class="big-link"><i class="fas fa-shopping-cart"></i> Shop</div>
             </a>
         </div>
