--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.instagram.com/witchprincess.ink/">Instagram</a>
+              <a class="nav-link" href="https://www.instagram.com/witchprincess.ink/">Recent Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://witchprincess.storenvy.com/">Shop</a>
+              <a class="nav-link" href="http://witchprincess.storenvy.com/">Buy Stuff</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="mailto:madisyndelporto@gmail.com">Contact</a>
+              <a class="nav-link" href="mailto:madisyndelporto@gmail.com">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -56,21 +56,27 @@
     <br />
     <div class="top-spacer"></div>
     <div class="container">
-      <div class="row">
+      <div class="row" style="background: #33333355;">
         <div class="col-sm">
+            <center>
             <a class="no-dec" href="https://www.instagram.com/witchprincess.ink/">
-            <div class="big-link"><i class="fab fa-instagram"></i> Instragram</div>
+                <div class="big-link"><i class="fab fa-instagram"></i><span style="white-space: nowrap;"> Recent Work</span></div>
             </a>
+            </center>
         </div>
         <div class="col-sm">
+            <center>
             <a class="no-dec" href="http://witchprincess.storenvy.com/">
-            <div class="big-link"><i class="fas fa-shopping-cart"></i> Shop</div>
+                <div class="big-link"><i class="fas fa-shopping-cart"></i><span style="white-space: nowrap;"> Buy Stuff</span></div>
             </a>
+            </center>
         </div>
         <div class="col-sm">
+            <center>
             <a class="no-dec" href="mailto:madisyndelporto@gmail.com">
-            <div class="big-link"><i class="fas fa-envelope"></i> Email</div>
+                <div class="big-link"><i class="fas fa-envelope"></i><span style="white-space: nowrap;"> Contact Me</span></div>
             </a>
+            </center>
         </div>
       </div>
     </div>
